[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Gimmicks/springs_yellow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gimmicks/Spring.gd" type="Script" id=2]
[ext_resource path="res://Audio/SFX/Gimmicks/Springs.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="Animation" id=2]
resource_name = "SpringRight"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 16, 16, 32 ), Rect2( 96, 16, 32, 32 ), Rect2( 80, 16, 16, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 8, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SpringUp"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 32, 32, 16 ), Rect2( 32, 16, 32, 32 ), Rect2( 0, 16, 32, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SpringUpLeft"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 272, 16, 32, 32 ), Rect2( 304, 0, 48, 48 ), Rect2( 240, 16, 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -8, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SpringUpRight"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Spring:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 160, 16, 32, 32 ), Rect2( 192, 0, 48, 48 ), Rect2( 128, 16, 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spring:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 8, -8 ), Vector2( 0, 0 ) ]
}

[node name="Spring" type="KinematicBody2D"]
collision_layer = 47
collision_mask = 64
script = ExtResource( 2 )

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Spring" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 16, 32, 16 )

[node name="SpringAnimator" type="AnimationPlayer" parent="."]
anims/SpringRight = SubResource( 2 )
anims/SpringUp = SubResource( 3 )
anims/SpringUpLeft = SubResource( 4 )
anims/SpringUpRight = SubResource( 5 )

[node name="sfxSpring" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
